--- a/Views/Manage/AddAuthor.cshtml
+++ b/Views/Manage/AddAuthor.cshtml
@@ -1,23 +1,27 @@
-@model BookCave.Models.InputModels.BookInputModel
+@model BookCave.Models.InputModels.AuthorInputModel
 
 <div class="col-lg-7 col-md-12 offset-lg-2 wow fadeInDown mb-5">
     <div class="card card-cascade wider">
-      <div class="view gradient-card-header blue-gradient p-3">
-        <h4 class="h2 mb-0">Add book</h4>
-      </div>
-      <div class="card-body ">
-        
-        <form>
+        <div class="view gradient-card-header blue-gradient p-3">
+            <h4 class="h2 mb-0">Add Author</h4>
+        </div>
+        <div class="card-body ">
+            <form asp-action="AddAuthor" asp-controller="Manage" method="POST" class="my-5">
 
-            <div class="form-group row d-flex">
-                <p class="label col-md-4 pt-2">Title</p>
-                <div class="col-md-8">
-                    <input class="form-control pt-0" id="Title" type="text">
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2 form-control-lg">Author's Name</p>
+                    <div class="col-md-8">
+                        <input asp-for="Name" class="form-control pt-0 form-lg form-control-lg" id="Title" type="text">
+                    </div>
                 </div>
-            </div>
 
-        </form>
-        
-      </div>
+                <div class="text-right mb-5">
+                    <a asp-action="Index" asp-controller="Manage" class="btn btn-danger waves-light">Cancel</a>
+                    <input type="submit" class="btn success-color-dark waves-light" value="Add Author!">
+                </div>
+
+            </form>
+
+        </div>
     </div>
-  </div>
+</div>
