--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,6 +42,15 @@
   <script type="text/javascript" src="~/lib/mdb/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/mdb.min.js"></script>
   <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
+
+  @{
+
+    if (controller == "user")
+    {
+        @await Html.PartialAsync("../User/_LoadJavascript.cshtml");
+    }
+
+  }
   
   @RenderSection("Scripts", required: false)
 </body>
