--- a/Views/Manage/Shared/_ManageLayout.cshtml
+++ b/Views/Manage/Shared/_ManageLayout.cshtml
@@ -32,7 +32,14 @@
     <script type="text/javascript" src="~/lib/mdb/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/lib/mdb/js/mdb.min.js"></script>
     <script type="text/javascript" src="~/js/site.js"></script>
-    <script type="text/javascript" src="~/js/dashboard.js"></script>
+    <script type="text/javascript" src="~/js/manage.js"></script>
+@{
+    var action = ViewContext.RouteData.Values["action"].ToString().ToLower();
+    if (action == "addbook")
+    {
+    <script type="text/javascript" src="~/js/manageAddBook.js"></script>
+    }
+}
 
 </body>
 </html>
