--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -44,7 +44,7 @@
 
                             <div class="md-form pb-3">
                                 <input type="password" id="ConfirmPassword" class="form-control white-text" asp-for="ConfirmPassword">
-                                <label asp-for="ConfirmPassword">Confirmm Password</label>
+                                <label asp-for="ConfirmPassword">Confirm Password</label>
                                 <div class="form-check my-4">
                                     <input class="form-check-input" type="checkbox" value="true" id="TermsAndConditions" asp-for="TermsAndConditions">
                                     <label class="form-check-label white-text" asp-for="TermsAndConditions">Accept the<a href="#" class="green-text font-weight-bold"> Terms and Conditions</a></label>
