--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -1,5 +1,3 @@
-
-
 <div class="container body-container">
     <!-- Row 1 -->
     <div class="row justify-content-center">
@@ -72,25 +70,25 @@
             <!--Table-->
         </div>
         <div class="col-lg-4">
-                <table class="table">
-                    <thead class="thead-dark">
+            <table class="table">
+                <thead class="thead-dark">
                     <tr>
-                    <th scope="col">Purchases</th>
+                        <th scope="col">Purchases</th>
                     </tr>
                 </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <ul>
-                                    <li>Order history</li>
-                                    <li>Cart</li>
-                                    <li>Wish List</li>
-                                    <li>Review My Books</li>
-                                </ul>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Order history</li>
+                                <li>Cart</li>
+                                <li>Wish List</li>
+                                <li>Review My Books</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <!-- Row 2 -->
@@ -110,54 +108,88 @@
             <div class="modal-body mx-3">
                 <div class="md-form mb-5">
                     <i class="fa fa-lock prefix grey-text"></i>
-                    <input type="password" id="defaultForm-pass" class="form-control validate">
+                    <input type="password" id="oldPassword" class="form-control validate">
                     <label data-error="wrong" data-success="right" for="defaultForm-pass">Your old password</label>
                 </div>
 
                 <div class="md-form mb-4">
                     <i class="fa fa-lock prefix grey-text"></i>
-                    <input type="password" id="defaultForm-pass" class="form-control validate">
+                    <input type="password" id="newPassword" class="form-control validate">
                     <label data-error="wrong" data-success="right" for="defaultForm-pass">Your new password</label>
                 </div>
 
                 <div class="md-form mb-4">
                     <i class="fa fa-lock prefix grey-text"></i>
-                    <input type="password" id="defaultForm-pass" class="form-control validate">
+                    <input type="password" id="confirmPassword" class="form-control validate">
                     <label data-error="wrong" data-success="right" for="defaultForm-pass">Confirm new password</label>
                 </div>
 
             </div>
             <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-default">Change Password</button>
+                <button id="changePassword" class="btn btn-default">Change Password</button>
             </div>
         </div>
     </div>
 </div>
-<!-- MODAL Change password -->  
+<!-- MODAL Change password -->
 
 <!-- MODAL Favorite Book -->
 <div class="modal fade" id="modalFavoriteBook" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content" id="favorite-Book">
 
-                <p>Favorite book stuff...</p>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <p>yeah!</p>
+            <div class="row">
+                <div class="col" id="FavoriteBookImg">
+                    <img class="img-fluid mt-5 ml-3" id="errorImage" src="~/images/errorImg.png">
+                </div>
 
+                <div class="col justify-content-center text-left" id="FavoriteBookInfo">
+
+                </div>
             </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-default">Close</button>
-            </div>
+
+        </div>
+        <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default">Close</button>
         </div>
     </div>
 </div>
-<!-- MODAL Favorite Book -->  
+</div>
+<!-- MODAL Favorite Book -->
+
+
+<!-- MODAL success info -->
+<div class="modal fade" id="centralModalSuccess" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-notify modal-success" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading lead">Modal Success</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true" class="white-text">&times;</span>
+                                        </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+                <div class="text-center">
+                    <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit iusto nulla aperiam
+                        blanditiis ad consequatur in dolores culpa, dignissimos, eius non possimus fugiat.
+                        Esse ratione fuga, enim, ab officiis totam.</p>
+                </div>
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary">Get it now <i class="fa fa-diamond ml-1"></i></a>
+                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">No, thanks</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- MODAL success info-->               
+                
