--- a/Views/Manage/ViewBooks.cshtml
+++ b/Views/Manage/ViewBooks.cshtml
@@ -1,46 +1,34 @@
-
 <div class="card card-cascade narrower">
 
-    <!--Card image-->
-    <div class="view gradient-card-header blue-gradient narrower py-2 mx-4 mb-3 d-flex justify-content-between align-items-center">
 
-        <a href="" class="white-text mx-3">View / Modify books</a>
-
-        <div>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-pencil mt-0"></i></button>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-remove mt-0"></i></button>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-info-circle mt-0"></i></button>
-        </div>
-
+    <div class="view gradient-card-header blue-gradient p-3 mb-5">
+        <h4 class="h2 mb-0">View books</h4>
     </div>
-    <!--/Card image-->
 
-    <div class="px-4">
+    <table class="table table-striped table-responsive-md mt-0" id="viewBooksTable">
 
-        <div class="table-wrapper">
-            <!--Table-->
-            <table class="table table-hover mb-5">
+        <!--Table head-->
+        <thead>
+            <tr>
+                <th class="th-lg"><a>ID <i class="fa fa-sort ml-1"></i></a></th>
+                <th class="th-lg"><a href="">Title<i class="fa fa-sort ml-1"></i></a></th>
+                <th class="th-lg"><a href="">Type<i class="fa fa-sort ml-1"></i></a></th>
+                <th class="th-lg"><a href="">Pub. Year<i class="fa fa-sort ml-1"></i></a></th>
+                <th class="th-lg"><a href="">ISBN<i class="fa fa-sort ml-1"></i></a></th>
+                <th class="th-lg"><a href="">Action<i class="fa fa-sort ml-1"></i></a></th>
+            </tr>
+        </thead>
+        <!--Table head-->
 
-                <!--Table head-->
-                <thead>
-                    <tr>
-                        <th class="th-lg"><a>ID <i class="fa fa-sort ml-1"></i></a></th>
-                        <th class="th-lg"><a href="">Title<i class="fa fa-sort ml-1"></i></a></th>
-                        <th class="th-lg"><a href="">Pub. Year<i class="fa fa-sort ml-1"></i></a></th>
-                        <th class="th-lg"><a href="">ISBN<i class="fa fa-sort ml-1"></i></a></th>
-                        <th class="th-lg"><a href="">Action<i class="fa fa-sort ml-1"></i></a></th>
-                    </tr>
-                </thead>
-                <!--Table head-->
+        <!--Table body-->
+        <tbody>
 
-                <!--Table body-->
-                <tbody>
+        </tbody>
+        <!--Table body-->
+    </table>
+    <!--Table-->
+</div>
 
-                </tbody>
-                <!--Table body-->
-            </table>
-            <!--Table-->
-        </div>
 
-    </div>
+
 </div>
