--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,6 +53,10 @@
     {
         <script type="text/javascript" src="~/js/CartControllerJQ.js"></script>
     }
+    else if(controller == "search")
+    {
+        <script type="text/javascript" src="~/js/SearchControllerJQ.js"></script>
+    }
 
   }
   
