--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -109,19 +109,19 @@
                 <div class="md-form mb-5">
                     <i class="fa fa-lock prefix grey-text"></i>
                     <input type="password" id="oldPassword" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="defaultForm-pass">Your old password</label>
+                    <label for="oldPassword">Your old password</label>
                 </div>
 
                 <div class="md-form mb-4">
                     <i class="fa fa-lock prefix grey-text"></i>
                     <input type="password" id="newPassword" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="defaultForm-pass">Your new password</label>
+                    <label for="newPassword">Your new password</label>
                 </div>
 
                 <div class="md-form mb-4">
                     <i class="fa fa-lock prefix grey-text"></i>
                     <input type="password" id="confirmPassword" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="defaultForm-pass">Confirm new password</label>
+                    <label for="confirmPassword">Confirm new password</label>
                 </div>
 
             </div>
@@ -165,7 +165,7 @@
         <div class="modal-content">
             <!--Header-->
             <div class="modal-header">
-                <p class="heading lead">Modal Success</p>
+                <p class="heading lead">Succsess!!!</p>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true" class="white-text">&times;</span>
@@ -176,20 +176,54 @@
             <div class="modal-body">
                 <div class="text-center">
                     <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit iusto nulla aperiam
-                        blanditiis ad consequatur in dolores culpa, dignissimos, eius non possimus fugiat.
-                        Esse ratione fuga, enim, ab officiis totam.</p>
+                    <p>Your action was executed succsessfully</p>
                 </div>
             </div>
 
             <!--Footer-->
             <div class="modal-footer justify-content-center">
-                <a type="button" class="btn btn-primary">Get it now <i class="fa fa-diamond ml-1"></i></a>
-                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">No, thanks</a>
+                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">Close</a>
             </div>
         </div>
         <!--/.Content-->
     </div>
 </div>
-<!-- MODAL success info-->               
+<!-- MODAL success info-->
+
+<!-- MODAL fail warning-->
+<div class="modal fade left" id="ModalWarning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-notify modal-warning modal-side modal-bottom-left" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Warning</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+
+                <div class="row">
+
+                    <div class="col-9">
+                        <p>Something went wrong with your request...</p>
+                        <p class="card-text"><strong>Please try again later.</strong></p>
+                    </div>
+                </div>
+
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">Close</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- MODAL fail warning-->     
                 
