changed layout css a little

--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -47,18 +47,15 @@
                 <!--Table head-->
 
                 <!--Table body-->
-                <tbody>
-                    <tr data-toggle="modal" data-target="#modalChangePassword">
+                <tbody class="hover-pointer">
+                    <tr class="" data-toggle="modal" data-target="#modalChangePassword">
                         <td>Change Password</td>
                     </tr>
-                    <tr id="ViewFavBook">
-                        <td>Favorite Book</td>
+                    <tr class="" id="ViewFavBook">
+                        <td>My Favorite Book</td>
                     </tr>
                     <tr>
-                        <td>Shipping Information</td>
-                    </tr>
-                    <tr>
-                        <td>Billing Information</td>
+                        <td id="">Change Shipping/Billing Information</td>
                     </tr>
                     <tr>
                         <td>Payment Options</td>
