--- a/Views/Shared/_header.cshtml
+++ b/Views/Shared/_header.cshtml
@@ -101,15 +101,8 @@
             </li>
 
           <!-- Shopping Basket -->
-          <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icon fa fa-shopping-basket"></i>></a>
-                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <p><strong>Basket</strong></p> <br>
-                    <p>Loop of items</p>
-                    <p>Loop of items</p>
-                    <p>Loop of items</p>
-                </div>
-            </li>
+          <a class="navbar-brand cartDropdown" asp-controller="Cart" asp-action="Index"><i class="icon fa fa-shopping-cart"></i></a>
+
 
           <!-- Account stuff -->
           <li class="nav-item dropdown">
