--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -48,14 +48,14 @@
 
                 <!--Table body-->
                 <tbody class="hover-pointer">
-                    <tr class="" data-toggle="modal" data-target="#modalChangePassword">
+                    <tr data-toggle="modal" data-target="#modalChangePassword">
                         <td>Change Password</td>
                     </tr>
-                    <tr class="" id="ViewFavBook">
+                    <tr id="ViewFavBook">
                         <td>My Favorite Book</td>
                     </tr>
                     <tr>
-                        <td id="">Change Shipping/Billing Information</td>
+                        <td id="changeShippingBilling">Change Shipping/Billing Information</td>
                     </tr>
                     <tr>
                         <td>Payment Options</td>
@@ -223,4 +223,58 @@
     </div>
 </div>
 <!-- MODAL fail warning-->     
-                
+
+<!-- MODAL Change shipping and billing -->
+<div class="modal fade" id="editShippingBilling" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+
+            <div class="row">
+                <div class="col mr-3 ml-3">
+                    <div class="md-form">
+                        <input type="text" id="ShippingFirstName" class="form-control validate">
+                        <label for="ShippingFirstName">First Name</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="ShippingLastName" class="form-control validate">
+                        <label for="ShippingLastName">Last Name</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="ShippingStreetName" class="form-control validate">
+                        <label for="ShippingStreetName">Street</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="number" id="ShippingHouseNumber" class="form-control validate">
+                        <label for="ShippingHouseNumber">House Number</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="ShippingCity" class="form-control validate">
+                        <label for="ShippingCity">City</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="ShippingZipCode" class="form-control validate">
+                        <label for="ShippingZipCode">Zip Code</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="ShippingCountry" class="form-control validate">
+                        <label for="ShippingCountry">Country</label>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- Modal footer -->
+        <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default">Close</button>
+        </div>
+    </div>
+</div>
+</div>
+<!-- MODAL Change shipping and billing -->
