updare account info html

--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -230,7 +230,9 @@
         <div class="modal-content">
 
             <div class="row">
+                <!-- Shipping Information -->
                 <div class="col mr-3 ml-3">
+                    <h3 class="mb-0 mt-3">Shipping Information</h3>
                     <div class="md-form">
                         <input type="text" id="ShippingFirstName" class="form-control validate">
                         <label for="ShippingFirstName">First Name</label>
@@ -266,8 +268,48 @@
                         <label for="ShippingCountry">Country</label>
                     </div>
                 </div>
+
+                <!-- Billing Information -->
+                <div class="col mr-3 ml-3">
+                    <h3 class="mb-0 mt-3">Billing Information</h3>
+                    <div class="md-form">
+                        <input type="text" id="BillingFirstName" class="form-control validate">
+                        <label for="BillingFirstName">First Name</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="BillingLastName" class="form-control validate">
+                        <label for="BillingLastName">Last Name</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="BillingStreetName" class="form-control validate">
+                        <label for="BillingStreetName">Street</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="number" id="BillingHouseNumber" class="form-control validate">
+                        <label for="BillingHouseNumber">House Number</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="BillingCity" class="form-control validate">
+                        <label for="BillingCity">City</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="BillingZipCode" class="form-control validate">
+                        <label for="BillingZipCode">Zip Code</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="text" id="BillingCountry" class="form-control validate">
+                        <label for="BillingCountry">Country</label>
+                    </div>
                 </div>
+
             </div>
+        </div>
 
         </div>
         <!-- Modal footer -->
