--- a/Views/Manage/EditBook.cshtml
+++ b/Views/Manage/EditBook.cshtml
@@ -1,4 +1,151 @@
-<div class="row">
-    <h1>Book name</h1>
-</div>
+@model BookCave.Models.InputModels.BookInputModel
 
+<div class="col-lg-8 col-md-12 offset-lg-2 wow fadeIn mb-5">
+    <div class="card card-cascade wider">
+        <div class="view gradient-card-header blue-gradient p-3">
+            <h4 class="h2 mb-0">Modify book</h4>
+        </div>
+        <div class="card-body ">
+
+            <form asp-action="addbook" asp-controller="manage" enctype="multipart/form-data" method="POST">
+
+                <div class="form-inline mt-2 mb-4 row" id="typeSelector">
+                    <div class="form-check col">
+                        <input class="form-check-input" asp-for="Type" type="radio" id="typePaperback" checked="checked" value="Paperback">
+                        <label class="form-check-label" for="typePaperback">Paperback</label>
+                    </div>
+
+                    <div class="form-check col">
+                        <input class="form-check-input" asp-for="Type" type="radio" id="typeHardcover" value="Hardcover">
+                        <label class="form-check-label" for="typeHardcover">Hardcover</label>
+                    </div>
+
+                    <div class="form-check col">
+                        <input class="form-check-input" asp-for="Type" type="radio" id="typeEbook" value="E-book">
+                        <label class="form-check-label" for="typeEbook">E-book</label>
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Title</p>
+                    <div class="col-md-8">
+                        <input asp-for="Title" class="form-control pt-0" type="text">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">ISBN</p>
+                    <div class="col-md-8">
+                        <input asp-for="Isbn" class="form-control pt-0" type="text">
+                    </div>
+                </div>
+
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Author(s) <a asp-controller="manage" asp-action="addauthor" target="_blank" class="btn btn-outline-info waves-effect btn-sm px-2">New author</a></p>
+                    <div class="col-md-6">
+                        <select asp-for="Author" id="authorList" class="mdb-select colorful-select dropdown-primary" multiple searchable="Search here..">
+                        <option value="" disabled selected>Select Author(s)...</option>
+                    </select>
+                        <button class="btn-save btn btn-primary btn-sm">Save</button>
+                    </div>
+                    <div class="col-md-2">
+                        <a class="btn btn-outline-info waves-effect btn-sm" id="refreshAuthors">Refresh</a>
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Genre(s) <a asp-controller="manage" asp-action="addgenre" target="_blank" class="btn btn-outline-info waves-effect btn-sm px-2">New genre</a></p>
+                    <div class="col-md-6">
+                        <select asp-for="Genre" id="genreList" class="mdb-select colorful-select dropdown-primary" multiple searchable="Search here..">
+                        <option value="" disabled selected>Select Genre(s)...</option>
+                    </select>
+                        <button class="btn-save btn btn-primary btn-sm">Save</button>
+                    </div>
+                    <div class="col-md-2">
+                        <a class="btn btn-outline-info waves-effect btn-sm ">Refresh</a>
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Publisher <a asp-controller="manage" asp-action="addpublisher" target="_blank" class="btn btn-outline-info waves-effect btn-sm px-2">New publisher</a></p>
+                    <div class="col-md-6">
+                        <select asp-for="PublisherId" id="publisherList" class="mdb-select colorful-select dropdown-primary" searchable="Search here..">
+                        <option value="" disabled selected>Select Publisher...</option>
+                    </select>
+                        <button class="btn-save btn btn-primary btn-sm">Save</button>
+                    </div>
+                    <div class="col-md-2">
+                        <a class="btn btn-outline-info waves-effect btn-sm ">Refresh</a>
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Description</p>
+                    <div class="col-md-8">
+                        <div class="form-group shadow-textarea">
+                            <textarea asp-for="Description" class="form-control z-depth-1" rows="3" placeholder="Write description here..."></textarea>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Page count</p>
+                    <div class="col-md-8">
+                        <input asp-for="PageCount" class="form-control pt-0" type="text">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Audio Length</p>
+                    <div class="col-md-8">
+                        <input asp-for="Length" class="form-control pt-0" type="text">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Price</p>
+                    <div class="col-md-8">
+                        <input asp-for="Price" class="form-control pt-0" type="text">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Publishing year</p>
+                    <div class="col-md-8">
+                        <input asp-for="PublishingYear" class="form-control pt-0" type="text">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Font</p>
+                    <div class="col-md-8">
+                        <input asp-for="Font" class="form-control pt-0" type="text">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2">Cover Image</p>
+
+                    <div class="file-field col-md-8">
+                        <a class="btn-floating blue-gradient mt-0 float-left btn-sm">
+                        <i class="fa fa-cloud-upload"></i>
+                        <input type="file" asp-for="CoverImage" accept="image/jpeg">
+                    </a>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate form-control pt-0" type="text" placeholder="Upload image" disabled>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-right">
+                    <button class="btn btn-danger waves-light">Cancel</button>
+                    <input type="submit" class="btn success-color-dark waves-light" value="Add book!">
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+</div>
