--- a/Views/Manage/ViewBooks.cshtml
+++ b/Views/Manage/ViewBooks.cshtml
@@ -1,34 +1,74 @@
-<div class="card card-cascade narrower">
+<div class="col-lg-10 col-md-12 offset-lg-1 wow fadeIn mb-5">
+    <div class="card card-cascade wider">
+        <div class="view gradient-card-header blue-gradient p-3">
+            <h4 class="h2 mb-0">Existing Books</h4>
+        </div>
+        <div class="card-body ">
+            <div class="row">
+                <div class="col-md-12">
+                    <table id="viewBooksTable" class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Book ID</th>
+                                <th>Title</th>
+                                <th>Type</th>
+                                <th>Publishing Year</th>
+                                <th>ISBN</th>
+                                <th class="text-center">Actions</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th>Book ID</th>
+                                <th>Title</th>
+                                <th>Type</th>
+                                <th>Publishing Year</th>
+                                <th>ISBN</th>
+                                <th class="text-center">Actions</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
-
-    <div class="view gradient-card-header blue-gradient p-3 mb-5">
-        <h4 class="h2 mb-0">View books</h4>
+        </div>
     </div>
-
-    <table class="table table-striped table-responsive-md mt-0" id="viewBooksTable">
-
-        <!--Table head-->
-        <thead>
-            <tr>
-                <th class="th-lg"><a>ID <i class="fa fa-sort ml-1"></i></a></th>
-                <th class="th-lg"><a href="">Title<i class="fa fa-sort ml-1"></i></a></th>
-                <th class="th-lg"><a href="">Type<i class="fa fa-sort ml-1"></i></a></th>
-                <th class="th-lg"><a href="">Pub. Year<i class="fa fa-sort ml-1"></i></a></th>
-                <th class="th-lg"><a href="">ISBN<i class="fa fa-sort ml-1"></i></a></th>
-                <th class="th-lg"><a href="">Action<i class="fa fa-sort ml-1"></i></a></th>
-            </tr>
-        </thead>
-        <!--Table head-->
-
-        <!--Table body-->
-        <tbody>
-
-        </tbody>
-        <!--Table body-->
-    </table>
-    <!--Table-->
 </div>
 
 
+<!-- Modal to confirm deletion-->
+<div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-notify modal-danger" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Confirm deletion</p>
 
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="col">
+                        <h4 class="text-center" id="modalText">Are you sure you would like to delete the book "<span>BOOK TITLE</span>"?</h4>
+                    </div>
+                </div>
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-danger" id="yesDelete">Yes! Delete this</a>
+                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">No, thanks</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
 </div>
+<!-- End of modal to confirm deletion-->
