--- a/Views/Manage/ViewEmployeesList.cshtml
+++ b/Views/Manage/ViewEmployeesList.cshtml
@@ -1,19 +1,17 @@
 <div class="col-lg-10 col-md-12 offset-lg-1 wow fadeIn mb-5">
     <div class="card card-cascade wider">
         <div class="view gradient-card-header blue-gradient p-3">
-            <h4 class="h2 mb-0">Existing Books</h4>
+            <h4 class="h2 mb-0">Employees List</h4>
         </div>
         <div class="card-body ">
             <div class="row">
                 <div class="col-md-12">
-                    <table id="viewBooksTable" class="table table-striped" cellspacing="0" width="100%">
+                    <table id="viewEmployeesTable" class="table table-striped" cellspacing="0" width="100%">
                         <thead>
                             <tr>
-                                <th>Book ID</th>
-                                <th>Title</th>
-                                <th>Type</th>
-                                <th>Publishing Year</th>
-                                <th>ISBN</th>
+                                <th>Employee ID</th>
+                                <th>Username</th>
+                                <th>User Type</th>
                                 <th class="text-center">Actions</th>
                             </tr>
                         </thead>
@@ -47,7 +45,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <h4 class="text-center" id="modalText">Are you sure you would like to delete the book "<span>BOOK TITLE</span>"?</h4>
+                        <h4 class="text-center" id="modalText">Are you sure you would like to delete employee "<span>EMPLOYEE NAME</span>"?</h4>
                     </div>
                 </div>
             </div>
