--- a/Views/Manage/Shared/_ManageLayout.cshtml
+++ b/Views/Manage/Shared/_ManageLayout.cshtml
@@ -11,10 +11,13 @@
     <link rel="stylesheet" type="text/css" href="~/lib/mdb/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="~/lib/mdb/css/mdb.min.css" />
     <link rel="stylesheet" type="text/css" href="~/css/manageCSS/manage.css" /> 
-    @{ var action = ViewContext.RouteData.Values["action"].ToString().ToLower(); if (action == "viewbooks") {
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css"/>
-    <link rel="stylesheet" type="text/css" href="~/css/manageCSS/manageAddBook.css" /> 
-    } }
+    @{ 
+        var action = ViewContext.RouteData.Values["action"].ToString().ToLower(); 
+        if (action == "viewbooks") {
+            <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" />
+            <link rel="stylesheet" type="text/css" href="~/css/manageCSS/manageAddBook.css" />
+        }
+    }
 
 </head>
 
@@ -40,11 +43,18 @@
     <script type="text/javascript" src="~/js/manageJS/manage.js"></script>
     @{ var action = ViewContext.RouteData.Values["action"].ToString().ToLower(); if (action == "addbook") {
     <script type="text/javascript" src="~/js/manageJS/manageAddBook.js"></script>
+    } else if (action == "modifybookbyid") {
+        <script type="text/javascript" src="~/js/manageJS/manageModifyBook.js"></script>
     } else if (action == "viewbooks") {
     <script type="text/javascript" src="~/js/manageJS/manageViewBooks.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
-    } }
+    } else if (action == "viewemployeeslist")
+    {
+    <script type="text/javascript" src="~/js/manageJS/manageViewEmployeesList.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    }}
 
 </body>
 
